--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "vite": "^5.4.11"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
     "react": "^18.3.1",
