--- a/service/package.json
+++ b/service/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2",
-    "uuid": "^11.0.3"
+    "express": "^4.21.2"
   }
 }
